--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
-    <head><title>E Commerce</title></head>
-    <body>
-        <h1>This is my first github project</h1>
-    </body>
+
+<head>
+    <title>CareerConnect</title>
+</head>
+
+<body>
+    <h1>This is my first github project</h1>
+</body>
+
 </html>
