design UI for Register and Login page

--- a/all-quiz.html
+++ b/all-quiz.html
@@ -49,7 +49,134 @@
         </div>
     </nav>
 
-    <h1>All Quiz Page</h1>
+    <h1 class="display-4 my-5 text-center">All Quizzes</h1>
+
+    <div class="container">
+        <div class="d-flex">
+            <a href="./all-quiz.html" class="btn btn-light me-2">All Quiz</a>
+            <a href="./all-quiz.html" class="btn btn-light me-2">ICT</a>
+            <a href="./all-quiz.html" class="btn btn-light me-2">SFT</a>
+            <a href="./all-quiz.html" class="btn btn-light me-2">ET</a>
+        </div>
+    </div>
+
+    <div class="container my-4">
+        <form class="Container d-flex my-4" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <a href="#" type="submit" class="btn btn-primary ms-2">Search</a>
+        </form>
+    </div>
+
+
+    <div class="container">
+
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+            <div class="col">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <H3>Logic Gate</H3>
+                        <p class="card-text">Total Questions - 50</p>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-sm btn-outline-success">Start Quiz</button>
+                            </div>
+                            <small class="text-body-secondary">Aprill 27, 2024 9.00 AM</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <H3>Logic Gate</H3>
+                        <p class="card-text">Total Questions - 50</p>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="btn-group">
+                                <a href="./Quiz.html" class="btn btn-sm btn-outline-success">Start Quiz</a>
+                            </div>
+                            <small class="text-body-secondary">Aprill 27, 2024 9.00 AM</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <H3>Logic Gate</H3>
+                        <p class="card-text">Total Questions - 50</p>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-sm btn-outline-success">Start Quiz</button>
+                            </div>
+                            <small class="text-body-secondary">Aprill 27, 2024 9.00 AM</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <H3>Logic Gate</H3>
+                        <p class="card-text">Total Questions - 50</p>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-sm btn-outline-success">Start Quiz</button>
+                            </div>
+                            <small class="text-body-secondary">Aprill 27, 2024 9.00 AM</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <H3>Logic Gate</H3>
+                        <p class="card-text">Total Questions - 50</p>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-sm btn-outline-success">Start Quiz</button>
+                            </div>
+                            <small class="text-body-secondary">Aprill 27, 2024 9.00 AM</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <H3>Logic Gate</H3>
+                        <p class="card-text">Total Questions - 50</p>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-sm btn-outline-success">Start Quiz</button>
+                            </div>
+                            <small class="text-body-secondary">Aprill 27, 2024 9.00 AM</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <footer class="py-3 my-4">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Cantact</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Feedback</a></li>
+        </ul>
+        <p class="text-center text-body-secondary">© 2024, Testgenius</p>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 </body>
