--- a/login.html
+++ b/login.html
@@ -49,7 +49,7 @@
         </div>
     </nav>
 
-    <h1 class="display-4 my-5 text-center">Register</h1>
+    <h1 class="display-4 my-5 text-center">Login</h1>
     <div class="container">
         <div class="row">
             <div class="col">
@@ -57,28 +57,20 @@
             <div class="col">
                 <form>
                     <div class="mb-3">
-                        <label for="exampleInputEmail2" class="form-label visually-hidden">Email</label>
-                        <input type="email" class="form-control" id="exampleInputEmail2" aria-describedby="emailHelp" placeholder="Email">
+                        <label for="exampleInputEmail1" class="form-label">Username</label>
+                        <input type="username" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                     </div>
                     <div class="mb-3">
-                        <label for="exampleInputEmail1" class="form-label visually-hidden">Username</label>
-                        <input type="username" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Username">
-                    </div>
-                    <div class="mb-3">
-                        <label for="exampleInputPassword1" class="form-label visually-hidden">Password</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-                    </div>
-                    <div class="mb-3">
-                        <label for="exampleInputPassword2" class="form-label visually-hidden">Repeat Password</label>
-                        <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Repeat Password">
+                        <label for="exampleInputPassword1" class="form-label">Password</label>
+                        <input type="password" class="form-control" id="exampleInputPassword1">
                     </div>
                     <div class="mb-3 form-check">
                         <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                        <label class="form-check-label" for="exampleCheck1">Terms and Conditions</label>
+                        <label class="form-check-label" for="exampleCheck1">Remember me</label>
                     </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
-                    <p>Already a user? <a href="./login.html">Login</a></p>
                 </form>
+                <p>Not a user? <a href="./register.html">Register</a></p>
             </div>
             <div class="col">
             </div>
