--- a/profile.html
+++ b/profile.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Testgenius</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" integrity="sha384-4LISF5TTJX/fLmGSxO53rV4miRxdg84mZsxmO8Rx5jGtp/LbrixFETvWa5a6sESd" crossorigin="anonymous">
 </head>
 
 <body>
@@ -50,15 +51,76 @@
     </nav>
 
     <h1 class="display-4 my-5 text-center">Pubudu's Profile</h1>
-    <div class="container">
+    <div class="container text-center">
         <div class="btn-group" role="group" aria-label="Basic mixed styles example">
             <button type="button" class="btn btn-outline-primary">Edit</button>
             <button type="button" class="btn btn-outline-danger">Delete</button>
         </div>
-    </div>
+
+        <div class="container text-center my-5">
+            <div class="row">
+                <div class="col">
+                    <img src="./user.png" alt="user-profile" width="150" height="150">
+                    <h2 class="fs-3">@Pubudu</h2>
+                </div>
+                <div class="col">
+                    <h2>Pubudu Shehan</h2>
+                    <p class="fs-5"> <i class="bi bi-gender-ambiguous"></i>Male</p>
+                    <p class="fs-5"> <i class="bi bi-geo-alt-fill"></i>Kurunegala</p>
+                    <p class="fs-5"> <i class="bi bi-file-person"></i>I'm Student of Technology Stream</p>
+                </div>
+            </div>
+        </div>
+
+        <hr class="my-5">
+
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h3>Quiz attended by @Pubudu</h3>
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">Quiz</th>
+                                <th scope="col">Marks</th>
+                                <th scope="col">Time</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">1</th>
+                                <td>ICT</td>
+                                <td>9/10</td>
+                                <td>April 27, 2024 9:00 PM</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">2</th>
+                                <td>SFT</td>
+                                <td>8/10</td>
+                                <td>April 29, 2024 9:00 PM</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="col">
+                    <h3>@User Performance</h3>
+                </div>
+
+                <footer class="py-3 my-4">
+                    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+                        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Cantact</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Feedback</a></li>
+                    </ul>
+                    <p class="text-center text-body-secondary">© 2024, Testgenius</p>
+                </footer>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 </body>
 
