--- a/Quiz.html
+++ b/Quiz.html
@@ -9,13 +9,20 @@
 </head>
 
 <body>
-
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container text-center my-2 d-sm-block d-lg-none">
+        <div class="btn-group" role="group" aria-label="Basic outlined example">
+            <a href="./index.html" class="btn btn-outline-primary">Home</a>
+            <a href="./all-quiz.html" class="btn btn-outline-primary">Quiz</a>
+            <a href="./leaderboard.html" class="btn btn-outline-primary">LeaderBoard</a>
+            <a href="./login.html" class="btn btn-outline-primary">Login</a>
+        </div>
+    </div>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary d-none d-lg-block">
         <div class="container">
             <a class="navbar-brand" href="#">Testgenius</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+            <span class="navbar-toggler-icon"></span>
+          </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
@@ -29,8 +36,8 @@
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Other
-            </a>
+                  Other
+                </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="#">Blog</a></li>
                             <li><a class="dropdown-item" href="#">About</a></li>
@@ -51,7 +58,7 @@
     </nav>
 
     <h1 class="display-4 my-5 text-center">Logic Gate - (50)</h1>
-    <p class="fs-5 text-center">this is the 2018 Past Paper</p>
+    <p class="fs-5 text-center container">this is the 2018 Past Paper</p>
 
     <div class="container">
         <div class="d-flex justify-content-between">
