--- a/all-quiz.html
+++ b/all-quiz.html
@@ -9,7 +9,15 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container text-center my-2 d-sm-block d-lg-none">
+        <div class="btn-group" role="group" aria-label="Basic outlined example">
+            <a href="./index.html" class="btn btn-outline-primary">Home</a>
+            <a href="./all-quiz.html" class="btn btn-outline-primary">Quiz</a>
+            <a href="./leaderboard.html" class="btn btn-outline-primary">LeaderBoard</a>
+            <a href="./login.html" class="btn btn-outline-primary">Login</a>
+        </div>
+    </div>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary d-none d-lg-block">
         <div class="container">
             <a class="navbar-brand" href="#">Testgenius</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -70,7 +78,7 @@
 
     <div class="container">
 
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+        <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-3 g-3">
             <div class="col">
                 <div class="card shadow-sm">
                     <div class="card-body">
@@ -96,7 +104,7 @@
                             <div class="btn-group">
                                 <a href="./Quiz.html" class="btn btn-sm btn-outline-success">Start Quiz</a>
                             </div>
-                            <small class="text-body-secondary">Aprill 27, 2024 9.00 AM</small>
+                            <small class="text-body-secondary">3 weeks ago</small>
                         </div>
                     </div>
                 </div>
