--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Testgenius</title>
+    <link rel="stylesheet" href="./style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
@@ -57,34 +58,55 @@
         </div>
     </nav>
 
-    <h1 class="display-4 my-5 text-center">Login</h1>
-    <div class="container">
-        <div class="row row-cols-sm-1 row-cols-lg-3 container">
-            <div class="col-12">
-            </div>
-            <div class="col">
-                <form>
-                    <div class="mb-3">
-                        <label for="exampleInputEmail1" class="form-label visually-hidden">Username</label>
-                        <input type="username" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Username">
-                    </div>
-                    <div class="mb-3">
-                        <label for="exampleInputPassword1" class="form-label visually-hidden">Password</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-                    </div>
-                    <div class="mb-3 form-check">
-                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                        <label class="form-check-label" for="exampleCheck1">Remember me</label>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </form>
-                <p>Not a user? <a href="./register.html">Register</a></p>
-            </div>
-            <div class="col-12">
-            </div>
+    <div class="container text-center my-5">
+        <h1 class="display-5 fw-bold my-2">Welcome to Testgenius</h1>
+        <p class="fs-3">Not just make your ranking in college but also in knowledge</p>
+        <div class="d-inline-flex gap-2 mb-5">
+            <a href="./all-quiz.html" class="d-inline-flex align-items-center btn btn-primary btn-lg px-4"> 
+              Take a Quiz
+            </a>
+            <a href="./register.html" class="btn btn-outline-secondary btn-lg px-4 ">
+              Sign Up
+            </a>
         </div>
     </div>
 
+    <div class="container text-center">
+        <h1 class="display-4 my-5 ">LeaderBoard</h1>
+
+        <div class="row row-cols-sm-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 mx-3">
+            <div class="col-lg-4 position-relative mb-4">
+                <img src="./user.png" alt="user-profile" class="img-fluid" width="150" height="150">
+                <span class="position-absolute top-0 start-90 translate-middle badge rounded-pill bg-success">1</span>
+                <h2 class="fw-normal">@Pubudu</h2>
+                <p>Some representative placeholder content for the three columns of text below the carousel.</p>
+                <p><a class="btn btn-secondary" href="./profile.html">View Profile »</a></p>
+            </div>
+
+            <div class="col-lg-4 position-relative mb-4">
+                <img src="./user.png" alt="user-profile" class="img-fluid" width="150" height="150">
+                <span class="position-absolute top-0 start-90 translate-middle badge rounded-pill bg-success">2</span>
+                <h2 class="fw-normal">@Pubudu</h2>
+                <p>Some representative placeholder content for the three columns of text below the carousel.</p>
+                <p><a class="btn btn-secondary" href="./profile.html">View Profile »</a></p>
+            </div>
+
+            <div class="col-lg-4 position-relative mb-4">
+                <img src="./user.png" alt="user-profile" class="img-fluid" width="150" height="150">
+                <span class="position-absolute top-0 start-90 translate-middle badge rounded-pill bg-success">3</span>
+                <h2 class="fw-normal">@Pubudu</h2>
+                <p>Some representative placeholder content for the three columns of text below the carousel.</p>
+                <p><a class="btn btn-secondary" href="./profile.html">View Profile »</a></p>
+            </div>
+            <div class="col-lg-4 position-relative mb-4">
+                <img src="./user.png" alt="user-profile" class="img-fluid" width="150" height="150">
+                <span class="position-absolute top-0 start-90 translate-middle badge rounded-pill bg-success">4</span>
+                <h2 class="fw-normal">@Pubudu</h2>
+                <p>Some representative placeholder content for the three columns of text below the carousel.</p>
+                <p><a class="btn btn-secondary" href="./profile.html">View Profile »</a></p>
+            </div>
+        </div>
+    </div>
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
             <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
@@ -96,7 +118,6 @@
         </ul>
         <p class="text-center text-body-secondary">© 2024, Testgenius</p>
     </footer>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 </body>
