--- a/register.html
+++ b/register.html
@@ -9,7 +9,15 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container text-center my-2 d-sm-block d-lg-none">
+        <div class="btn-group" role="group" aria-label="Basic outlined example">
+            <a href="./index.html" class="btn btn-outline-primary">Home</a>
+            <a href="./all-quiz.html" class="btn btn-outline-primary">Quiz</a>
+            <a href="./leaderboard.html" class="btn btn-outline-primary">LeaderBoard</a>
+            <a href="./login.html" class="btn btn-outline-primary">Login</a>
+        </div>
+    </div>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary d-none d-lg-block">
         <div class="container">
             <a class="navbar-brand" href="#">Testgenius</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,10 +59,10 @@
 
     <h1 class="display-4 my-5 text-center">Register</h1>
     <div class="container">
-        <div class="row">
-            <div class="col">
+        <div class="row row row-cols-sm-1 row-cols-lg-3 container">
+            <div class="col-12">
             </div>
-            <div class="col">
+            <div class="col-12">
                 <form>
                     <div class="mb-3">
                         <label for="exampleInputEmail2" class="form-label visually-hidden">Email</label>
@@ -80,10 +88,22 @@
                     <p>Already a user? <a href="./login.html">Login</a></p>
                 </form>
             </div>
-            <div class="col">
+            <div class="col-12">
             </div>
         </div>
     </div>
+
+    <footer class="py-3 my-4">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Cantact</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Feedback</a></li>
+        </ul>
+        <p class="text-center text-body-secondary">© 2024, Testgenius</p>
+    </footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
